# safe-robot-steering

./: .gitignore  .gitmodules  README.md  cfg.py  pyproject.toml
datasets/: find_normalizer_constants.py  find_unnormalizer_constants.py
env/: env.py  libero_env.py  libero_env_runner.py
experiments/: evaluate_one_task_success.py  mech_interp_experiments.py  prob_distr_sanity_check.py
libero/libero/: config.yaml
mech_interp/: analyze_FFN.py
model/: smolvla_policy.py
runs/grpo_smolvla/: events.out.tfevents.1764574285.navlab-ws1.635618.0  events.out.tfevents.1764574873.navlab-ws1.637728.0  events.out.tfevents.1764575246.navlab-ws1.638924.0  events.out.tfevents.1764575968.navlab-ws1.640756.0  events.out.tfevents.1764576367.navlab-ws1.641559.0  events.out.tfevents.1764576377.navlab-ws1.641659.0  events.out.tfevents.1764576512.navlab-ws1.642235.0  events.out.tfevents.1764577118.navlab-ws1.644584.0  events.out.tfevents.1764578600.navlab-ws1.649688.0  events.out.tfevents.1764578784.navlab-ws1.650214.0  events.out.tfevents.1764579928.navlab-ws1.654292.0  events.out.tfevents.1764581511.navlab-ws1.664379.0  events.out.tfevents.1764581589.navlab-ws1.664895.0  events.out.tfevents.1764581916.navlab-ws1.666681.0  events.out.tfevents.1764582019.navlab-ws1.667326.0  events.out.tfevents.1764662920.navlab-ws1.53234.0  events.out.tfevents.1764662954.navlab-ws1.53556.0  events.out.tfevents.1764663504.navlab-ws1.58652.0  (+26 more)
train/: train_smolvla_grpo.py
utils/: find_normalizer_constants.py  find_unnormalizer_constants.py  print_gpu.py
